Apply suggestion from @pmkovar
Co-authored-by: Petr Kovar <pknbe@volny.cz>

--- a/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
@@ -45,7 +45,7 @@ When you import a cluster from a cloud provider into Rancher, UpstreamSpec repre
 
 The effective desired state can be thought of as the UpstreamSpec, plus all non-nil fields in the EKSConfig. This is what is displayed in the UI.
 endif::[]
-ifeval::["{build-type}" == "mcm"]
+ifeval::["{build-type}" == "srfa"]
  ** For EKS, the field is called EKSConfig
 .  The UpstreamSpec object
  ** For EKS, this is located on the EKSStatus field on the Status of the Cluster.
