--- a/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
@@ -22,7 +22,7 @@ You may accidentally overwrite the state from one source if you simultaneously p
 There are two fields on the Rancher Cluster object that must be understood to understand how syncing works:
 
 . The config object for the cluster, located on the Spec of the Cluster:
-ifeval::["{build-type}" != "mcm"]
+ifeval::["{build-type}" != "srfa"]
  ** For EKS, the field is called EKSConfig.
 . The UpstreamSpec object:
  ** For EKS, this is located on the EKSStatus field on the Status of the Cluster.
