Replace  registry.suse.com w/ registry.rancher.com

--- a/versions/v2.10/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
+++ b/versions/v2.10/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
@@ -96,7 +96,7 @@ For information on enabling experimental features, refer to xref:rancher-admin/e
 |
 
 | `auditLog.image.repository`
-| "registry.suse.com/bci/bci-micro"
+| "registry.rancher.com/bci/bci-micro"
 | `string` - Location for the image used to collect audit logs.
 |
 
