--- a/versions/v2.10/modules/zh/pages/installation-and-upgrade/references/helm-chart-options.adoc
+++ b/versions/v2.10/modules/zh/pages/installation-and-upgrade/references/helm-chart-options.adoc
@@ -93,7 +93,7 @@
 |
 
 | `auditLog.image.repository`
-| "registry.suse.com/bci/bci-micro"
+| "registry.rancher.com/bci/bci-micro"
 | `string` - 用于收集审计日志的镜像的位置。
 |
 
