--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/references/helm-chart-options.adoc
@@ -92,7 +92,7 @@ For information on enabling experimental features, refer to xref:rancher-admin/e
 | `int` - maximum size in megabytes of the audit log file before it gets rotated (only applies when `auditLog.destination` is set to `hostPath`)
 
 | `auditLog.image.repository`
-| "registry.suse.com/bci/bci-micro"
+| "registry.rancher.com/bci/bci-micro"
 | `string` - Location for the image used to collect audit logs.
 
 | `auditLog.image.tag`
