--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -198,12 +198,15 @@ endif::[]
 ** xref:cluster-deployment/about-rancher-agents.adoc[]
 ** xref:cluster-deployment/enable-cluster-agent-scheduling-customization.adoc[]
 ** xref:cluster-deployment/infra-providers/infra-providers.adoc[]
+ifeval::["{build-type}" != "srfa"]
 *** xref:cluster-deployment/infra-providers/digitalocean/digitalocean.adoc[]
 **** xref:cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/digitalocean/node-template-configuration.adoc[]
+endif::[]
 *** xref:cluster-deployment/infra-providers/aws/aws.adoc[]
 **** xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/aws/node-template-configuration.adoc[]
+ifeval::["{build-type}" != "srfa"]
 *** xref:cluster-deployment/infra-providers/azure/azure.adoc[]
 **** xref:cluster-deployment/infra-providers/azure/machine-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/azure/node-template-configuration.adoc[]
@@ -219,6 +222,7 @@ endif::[]
 **** xref:cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc[]
 **** xref:cluster-deployment/infra-providers/vsphere/node-template-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/vsphere/shutdown-vm.adoc[]
+endif::[]
 ** xref:cluster-deployment/custom-clusters/custom-clusters.adoc[]
 *** xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc[]
 **** xref:cluster-deployment/custom-clusters/windows/azure-storageclass-configuration.adoc[]
