--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -254,7 +254,9 @@ endif::[]
 ***** xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[]
 ***** xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc[]
 **** xref:cluster-admin/manage-clusters/persistent-storage/examples/examples.adoc[]
+ifeval::["{build-type}" != "srfa"]
 ***** xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc[]
+endif::[]
 *** xref:cluster-admin/manage-clusters/install-cluster-autoscaler/install-cluster-autoscaler.adoc[]
 **** xref:cluster-admin/manage-clusters/install-cluster-autoscaler/use-aws-ec2-auto-scaling-groups.adoc[]
 *** xref:cluster-admin/manage-clusters/cluster-templates.adoc[]
