Sync Community PR #2062 ([v2.13] Update roletemplate aggregation doc and version information)

--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/references/feature-flags.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/references/feature-flags.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-26
+:revdate: 2025-11-27
 :page-revdate: {revdate}
 
 With feature flags, you can try out optional or experimental features, and enable legacy features that are being phased out.
@@ -17,7 +17,7 @@ Some feature flags require a restart of the Rancher container. Features that req
 
 The following is a list of feature flags available in Rancher. If you've upgraded from a previous Rancher version, you may see additional flags in the Rancher UI, such as `proxy` or `dashboard` (both xref:[discontinued]):
 
-* `aggregated-roletemplates`: Use cluster role aggregation architecture for RoleTemplates, ProjectRoleTemplateBindings, and ClusterRoleTemplateBindings. See xref:rancher-admin/experimental-features/cluster-role-aggregation.adoc[Cluster Role Aggregation] for more information.
+* `aggregated-roletemplates`: Use cluster role aggregation architecture for RoleTemplates, ProjectRoleTemplateBindings, and ClusterRoleTemplateBindings. See xref:rancher-admin/experimental-features/role-template-aggregation.adoc[RoleTemplate Aggregation] for more information.
 * `clean-stale-secrets`: Removes stale secrets from the `cattle-impersonation-system` namespace. This slowly cleans up old secrets which are no longer being used by the impersonation system.
 * `continuous-delivery`: Allows Fleet GitOps to be disabled separately from Fleet. See xref:rancher-admin/experimental-features/continuous-delivery.adoc[Continuous Delivery.] for more information.
 * `fleet`: The Rancher provisioning framework in v2.6 and later requires Fleet. The flag will be automatically enabled when you upgrade, even if you disabled this flag in an earlier version of Rancher. See xref:integrations/fleet/fleet.adoc[Continuous Delivery with Fleet] for more information.
@@ -61,7 +61,7 @@ The following table shows the availability and default values for some feature f
 
 | `aggregated-roletemplates`
 | `Disabled`
-| Highly experimental
+| Experimental
 | v2.11.0
 | This flag value is locked on install and can't be changed.
 
