--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/references/feature-flags.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/references/feature-flags.adoc
@@ -1,6 +1,6 @@
 = 功能开关
 :page-languages: [en, zh]
-:revdate: 2025-08-25
+:revdate: 2025-11-27
 :page-revdate: {revdate}
 
 使用功能开关（Feature Flag），你可以试用可选或实验性的功能并启用正在逐步淘汰的旧版功能。
@@ -16,7 +16,7 @@
 
 以下是 Rancher 中可用的功能开关列表。如果你是从旧 Rancher 版本升级的，你可能会在 Rancher UI 中看到其他功能，例如 `proxy` 或 `dashboard`（均xref:[已中断]）：
 
-* `aggregated-roletemplates`: Use cluster role aggregation architecture for RoleTemplates, ProjectRoleTemplateBindings, and ClusterRoleTemplateBindings. See xref:rancher-admin/experimental-features/cluster-role-aggregation.adoc[Cluster Role Aggregation] for more information.
+* `aggregated-roletemplates`: Use cluster role aggregation architecture for RoleTemplates, ProjectRoleTemplateBindings, and ClusterRoleTemplateBindings. See xref:rancher-admin/experimental-features/role-template-aggregation.adoc[RoleTemplate Aggregation] for more information.
 * `clean-stale-secrets`: Removes stale secrets from the `cattle-impersonation-system` namespace. This slowly cleans up old secrets which are no longer being used by the impersonation system.
 * `continuous-delivery`：允许从 Fleet 中单独禁用 Fleet GitOps。有关详细信息，请参阅xref:rancher-admin/experimental-features/continuous-delivery.adoc[持续交付]。
 * `fleet`：v2.6 及更高版本的 Rancher 配置框架需要 Fleet。即使你在旧 Rancher 版本中禁用了该标志，该标志也将在升级时自动启用。有关详细信息，请参阅 xref:integrations/fleet/fleet.adoc[{fleet-product-name}]。
@@ -37,7 +37,7 @@
 
 | `aggregated-roletemplates`
 | `false`
-| Highly experimentatl
+| Experimental
 | v2.11.0
 | This flag value is locked on install and can't be changed.
 
