--- a/versions/v2.13/modules/en/pages/api/workflows/kubeconfigs.adoc
+++ b/versions/v2.13/modules/en/pages/api/workflows/kubeconfigs.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-22
+:revdate: 2025-11-28
 :page-revdate: {revdate}
 
 == Kubeconfig Resource
@@ -21,16 +21,9 @@ To get a description of the fields and structure of the Kubeconfig resource, run
 kubectl explain kubeconfigs.ext.cattle.io
 ----
 
-== Feature Flag
-
-The Kubeconfigs Public API is available since Rancher v2.12.0 and is enabled by default. It can be disabled by setting the `ext-kubeconfigs` feature flag to `false`.
-
-[,shell]
-----
-kubectl patch feature ext-kubeconfigs -p '{"spec":{"value":false}}'
-----
-
 == Creating a Kubeconfig
+
+Since Rancher v2.13, the `status.bearerToken` contains a fully formed and ready-to-use Bearer token that can be used to authenticate to the xref:api/v3-rancher-api-guide.adoc[Rancher API].
 
 Only a **valid and active** Rancher user can create a Kubeconfig. For example, trying to create a Kubeconfig using a `system:admin` service account leads to an error:
 
