--- a/versions/v2.13/modules/en/pages/cluster-deployment/hosted-kubernetes/gke/configuration.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/hosted-kubernetes/gke/configuration.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-11-28
 :page-revdate: {revdate}
 
 == Cluster Location
@@ -71,7 +71,15 @@ Enable network policy enforcement on the cluster. A network policy defines the l
 
 _Mutable: yes_
 
-choose whether to enable or disable inter-project communication. Note that enabling Project Network Isolation will automatically enable Network Policy and Network Policy Config, but not vice versa.
+Choose whether to enable or disable inter-project communication.
+
+==== Imported Clusters
+
+For imported clusters, Project Network Isolation (PNI) requires Kubernetes Network Policy to be enabled on the cluster beforehand.
+For clusters created by Rancher, Rancher enables Kubernetes Network Policy automatically.
+
+. In GKE, enable Network Policy at the cluster level. Refer to the https://cloud.google.com/kubernetes-engine/docs/how-to/network-policy[official GKE guide] for instructions.
+. After enabling Network Policy, import the cluster into Rancher and enable PNI for project-level isolation.
 
 === Node Ipv4 CIDR Block
 
