Sync Community PR #2082 ([v2.13.0] UI session idle feature)

--- a/versions/v2.13/modules/zh/pages/api/api-tokens.adoc
+++ b/versions/v2.13/modules/zh/pages/api/api-tokens.adoc
@@ -1,6 +1,6 @@
 = API 令牌
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-11-28
 :page-revdate: {revdate}
 
 默认情况下，某些集群级别的 API 令牌是使用无限期 TTL（`ttl=0`）生成的。换言之，除非你让令牌失效，否则 `ttl=0` 的 API 令牌永远不会过期。令牌不会因为更改密码而失效。
@@ -77,6 +77,9 @@
 | <<_auth_user_session_ttl_minutes,`auth-user-session-ttl-minutes`>>
 | 用户认证会话令牌的 TTL（单位：分钟）。
 
+| <<_auth_user_session_idle_ttl_minutes, `auth-user-session-idle-ttl-minutes`>>
+| TTL in minutes on a user auth session token, without user activity.
+
 | <<_kubeconfig_default_token_ttl_minutes,`kubeconfig-default-token-TTL-minutes`>>
 | 默认 TTL，应用于所有 kubeconfig 令牌（除了<<_在生成的_kubeconfig_中禁用令牌,由 Rancher CLI 生成的令牌>>）。*此设置从 2.6.6 版本开始引入。*
 
@@ -93,6 +96,11 @@
 === auth-user-session-ttl-minutes
 
 存活时间（TTL）（单位：分钟），用于确定用户身份验证会话令牌的到期时间。过期后，用户将需要登录并获取新令牌。此设置不受 <<_auth_token_max_ttl_minutes,`auth-token-max-ttl-minutes`>> 的影响。会话令牌是在用户登录 Rancher 时创建的。
+
+=== auth-user-session-idle-ttl-minutes
+
+Time to live (TTL) without user activity for login sessions tokens, in minutes.
+By default, `auth-user-session-idle-ttl-minutes` is set to the same value as <<_auth_user_session_ttl_minutes, `auth-user-session-ttl-minutes`>> (for backward compatibility). It must never exceed the value of `auth-user-session-ttl-minutes`.
 
 === kubeconfig-default-token-TTL-minutes
 
