--- a/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-11-28
 :page-revdate: {revdate}
 
 == Microsoft Graph API
@@ -400,3 +400,24 @@ image::auth-setup-azure-ad-filter.png[Adding a group membership filter to Azure 
  ** Use the built-in Rancher auth or
  ** Use another third-party auth system and set that up in Rancher. Please see the xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[authentication docs] to learn how to configure other open authentication providers.
 ====
+
+== Azure AD Roles Claims
+
+Rancher supports the Roles claim provided by the Azure AD OIDC provider token, allowing for complete delegation of Role-Based Access Control (RBAC) to Azure AD. Previously, Rancher only processed the `Groups` claim to determine a user's `group` membership. This enhancement extends the logic to also include the Roles claim within the user's OIDC token.
+
+By including the Roles claim, administrators can:
+
+* Define specific high-level roles in Azure AD.
+* Bind these Azure AD Roles directly to ProjectRoles or ClusterRoles within Rancher.
+* Centralize and fully delegate access control decisions to the external OIDC provider.
+
+For example, consider the following role structure in Azure AD:
+
+|===
+| Azure AD Role Name | Members
+
+| project-alpha-dev
+| User A, User C
+|===
+
+User A logs into Rancher via Azure AD. The OIDC token includes a Roles claim, [`project-alpha-dev`]. The Rancher logic processes the token, and the internal list of `groups`/roles for User A which includes `project-alpha-dev`. An administrator has created a Project Role Binding that maps the Azure AD Role `project-alpha-dev` to the Project Role `Dev Member` for Project Alpha. User A is automatically granted the `Dev Member` role in Project Alpha.
