--- a/versions/v2.13/modules/en/pages/release-notes.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-11-18
+:revdate: 2025-12-09
 :page-revdate: {revdate}
 
 == Current Version
@@ -10,11 +10,11 @@ endif::[]
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
 
-| v2.12.4
-| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| v2.13.1
+| xref:release-notes/v2.13.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.13.1[GitHub Release]
 | N/A
 | &#10003;
-| N/A
+| &#10003;
 |===
 
 == Past Versions
@@ -22,27 +22,10 @@ endif::[]
 |===
 | Version | Release Notes | Support Matrix | Prime | Community
 
-| v2.12.3
-| https://github.com/rancher/rancher/releases/tag/v2.12.3[View]
-| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-3/[View]
-| &#10003;
-| &#10003;
-
-| v2.12.2
-| https://github.com/rancher/rancher/releases/tag/v2.12.2[View]
-| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-2/[View]
-| &#10003;
-| &#10003;
-
-| v2.12.1
-| https://github.com/rancher/rancher/releases/tag/v2.12.1[View]
-| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-1/[View]
-| &#10003;
-| &#10003;
-
-| v2.12.0
-| https://github.com/rancher/rancher/releases/tag/v2.12.0[View]
+| v2.13.0
+| https://github.com/rancher/rancher/releases/tag/v2.13.0[GitHub Release]
 | N/A
 | N/A
 | &#10003;
+
 |===
