--- a/versions/v2.13/modules/zh/nav.adoc
+++ b/versions/v2.13/modules/zh/nav.adoc
@@ -1,4 +1,6 @@
-* xref:release-notes.adoc[]
+* Release Notes
+** xref:release-notes.adoc[]
+** xref:release-notes/v2.13.adoc[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
