--- a/versions/v2.13/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes.adoc
@@ -1,6 +1,6 @@
 = 发版说明
 :page-languages: [en, zh]
-:revdate: 2025-11-18
+:revdate: 2025-12-09
 :page-revdate: {revdate}
 
 == 当前版本
@@ -8,11 +8,11 @@
 |===
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
-| v2.12.4
-| https://github.com/rancher/rancher/releases/tag/v2.12.4[View]
+| v2.13.1
+| xref:release-notes/v2.13.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.13.1[GitHub Release]
 | N/A
 | &#10003;
-| &cross;
+| &#10003;
 |===
 
 == 旧版本
@@ -20,27 +20,10 @@
 |===
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
-| v2.12.3
-| https://github.com/rancher/rancher/releases/tag/v2.12.3[View]
-| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-3/[View]
-| &#10003;
-| &#10003;
-
-| v2.12.2
-| https://github.com/rancher/rancher/releases/tag/v2.12.2[View]
-| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-2/[View]
-| &#10003;
-| &#10003;
-
-| v2.12.1
-| https://github.com/rancher/rancher/releases/tag/v2.12.1[View]
-| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-12-1/[View]
-| &#10003;
-| &#10003;
-
-| v2.12.0
-| https://github.com/rancher/rancher/releases/tag/v2.12.0[View]
+| v2.13.0
+| https://github.com/rancher/rancher/releases/tag/v2.13.0[GitHub Release]
 | N/A
 | N/A
 | &#10003;
+
 |===
