Add conditional build for community
By default, Prime-only bits are included.

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.adoc
@@ -141,6 +141,12 @@ It is crucial that you review the available disk space on your nodes and plan ac
 Rancher now has an enablement option called link:https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/enable-api-audit-log#viewing-api-audit-logs:~:text=Description-,AUDIT_LOG_ENABLED,-false%20%2D%20Disables%20the[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the link:https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/enable-api-audit-log[Enabling the API Audit Log to Record System Events] documentation and link:https://github.com/rancher/rancher/issues/48941[#48941].
 ====
 
+ifeval::["{build-type}" != "community"]
+== Chart Name Change for Rancher Prime
+
+Starting with Rancher Prime v2.13.1+, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher 2.13+, the chart name you use will be `rancher-prime` instead, for example `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repo.
+endif::[]
+
 == Changes in Image Artifacts
 
 Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up until this change, separate image digests files for each operating system and architecture have been maintained for compatibility reasons. With this change, only one file for each operating system is to be provided:
