Sync Community PR #1953  Scale down the original Rancher server

--- a/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-18
+:revdate: 2025-12-09
 :page-revdate: {revdate}
 
 If you are migrating Rancher to a new Kubernetes cluster, you don't need to install Rancher on the new cluster first. If Rancher is restored to a new cluster with Rancher already installed, it can cause problems.
@@ -198,3 +198,33 @@ helm install rancher rancher-prime/rancher -n cattle-system -f rancher-values.ya
 After migration completes, update your DNS records and any load balancers, so that traffic is routed correctly to the migrated cluster. Remember that you must use the same hostname that was set as the server URL in the original cluster.
 
 Full instructions on how to redirect traffic to the migrated cluster differ based on your specific environment. Refer to your hosting provider's documentation for more details.
+
+== 6. Scale Down the Original Rancher Instance
+
+After redirecting traffic to the new Rancher environment, *scale the original Rancher instance to 0 replicas* so it no longer contacts your managed clusters.
+
+Leaving the old server up can cause agents to keep contacting the original `server-url`, which often leaves clusters stuck in *Updating* in the new environment.
+
+[,bash]
+----
+kubectl scale deployment rancher -n cattle-system --replicas=0
+----
+
+If you originally ran Rancher in Docker:
+
+[,bash]
+----
+docker stop <original-rancher-container>
+----
+
+[NOTE]
+====
+If you wish to keep the original Rancher environment running, you can also restart the `cattle-cluster-agent` pods on each cluster connected to your Rancher environment.
+
+[,bash]
+----
+kubectl rollout restart deployment cattle-cluster-agent -n cattle-system
+----
+
+This triggers a rolling restart of the agent so it re-establishes the connection to the new Rancher environment.
+====
