Sync Community PR #2086 Add info about OIDC SLO support and #1591 Add troubleshooting note for group visibility issue in Assign Global Role

--- a/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc
@@ -169,3 +169,7 @@ If the `Issuer` and `Auth Endpoint` are generated incorrectly, open the *Configu
 === Error: "Invalid grant_type"
 
 In some cases, the "Invalid grant_type" error message may be misleading and is actually caused by setting the `Valid Redirect URI` incorrectly.
+
+== Configuring OIDC Single Logout (SLO)
+
+include::shared:ROOT:partial$en/configure-slo-oidc.adoc[]
