--- a/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-amazon-cognito.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-amazon-cognito.adoc
@@ -64,3 +64,7 @@ User and group search is not supported for Amazon Cognito. When assigning permis
 === You are not redirected to your authentication provider
 
 If you fill out the **Configure an Amazon Cognito account** form and click on **Enable**, and you are not redirected to Amazon Cognito, verify your Amazon Cognito configuration.
+
+== Configuring OIDC Single Logout (SLO)
+
+include::shared:ROOT:partial$en/configure-slo-oidc.adoc[]
