--- a/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-keycloak-oidc.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/users/authn-and-authz/configure-keycloak-oidc.adoc
@@ -251,3 +251,24 @@ On the *Configure a Keycloak OIDC account* form, change *Endpoints* to `Specify 
 === Keycloak Error: "Invalid grant_type"
 
 In some cases, this error message may be misleading and is caused by setting the `Valid Redirect URI` incorrectly.
+
+=== Unable to See Groups When Assigning Global Roles
+
+If you use a user that is not part of any groups for initial setup, then you cannot search for groups when trying to assign a global role.
+To resolve this, you can either:
+
+. Manually edit the `authconfig/keycloakoidc` object to enable group search.
+ .. On the Rancher server:
++
+[,bash]
+----
+  kubectl edit authconfigs.management.cattle.io keycloakoidc
+----
+
+ .. Set `groupSearchEnabled: true`.
+ .. Save your changes.
+. Reconfigure your Keycloak OIDC setup using a user that is assigned to at least one group in Keycloak.
+
+== Configuring OIDC Single Logout (SLO)
+
+include::shared:ROOT:partial$en/configure-slo-oidc.adoc[]
